--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "For Amazing shop Website",
   "main": "build/server.js",
   "scripts": {
-    "start": "node .",
+    "start": "ts-node server.ts",
     "build": "tsc",
     "dev": "nodemon"
   },
