--- a/simple-deploy-app-typescript-to-heroku/package.json
+++ b/simple-deploy-app-typescript-to-heroku/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/config/server.ts",
-    "dev": "nodemon -x ts-node src/config/server.ts"
+    "start": "ts-node server.ts",
+    "dev": "nodemon -x ts-node server.ts"
   },
   "keywords": [],
   "author": "",
