--- a/simple-deploy-app-typescript-to-heroku/tsconfig.json
+++ b/simple-deploy-app-typescript-to-heroku/tsconfig.json
@@ -61,6 +61,7 @@
     /* Advanced Options */
     "skipLibCheck": true, /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true, /* Disallow inconsistently-cased references to the same file. */
+    "allowJs": true
   },
   "include": [
     "src/**/*.ts" /* Include every ts file in source folder */
