--- a/api/package.json
+++ b/api/package.json
@@ -2,15 +2,15 @@
   "name": "amazing-api",
   "version": "1.0.0",
   "description": "For Amazing shop Website",
-  "main": "build/server.js",
+  "main": "index.js",
   "scripts": {
     "start": "ts-node server.ts",
-    "build": "tsc",
-    "dev": "nodemon"
+    "dev": "nodemon -x ts-node server.ts"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^15.9.0",
     "express": "^4.17.1",
