--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
   "name": "client",
-  "proxy": "http://localhost:5000",
+  "proxy": "https://arcane-badlands-11766.herokuapp.com",
   "version": "0.1.0",
+  "homepage": "http://Skytim.github.io/amazing-shop-app",
   "private": true,
   "engines": {
     "node": "15.x"
@@ -27,7 +28,8 @@
     "start": "react-scripts start -FAST_REFRESH=true",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "gh-pages": "^3.2.0"
   }
 }
