--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "proxy": "https://arcane-badlands-11766.herokuapp.com",
   "version": "0.1.0",
-  "homepage": "http://Skytim.github.io/amazing-shop-app",
+  "homepage": "http://skytim.github.io/amazing-shop-app",
   "private": true,
   "engines": {
     "node": "15.x"
