--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "lint:fix": "eslint './src/**/*.{ts,tsx}'"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +51,12 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
-    "gh-pages": "^3.2.0"
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-prettier": "^3.4.0",
+    "gh-pages": "^3.2.0",
+    "prettier": "^2.3.0"
   }
 }
