--- a/api/package.json
+++ b/api/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@types/express": "^4.17.12",
     "@types/node": "^15.9.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "mongoose": "^5.12.13",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
